--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-dev-server": "5.0.4"
   },
   "dependencies": {
+    "@types/node": "^22.8.6",
     "i18next": "^23.15.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
